package proto;
option go_package = "github.com/Mitra-Apps/be-user-service/domain/proto;error";

enum ErrorCode {
	UNKNOWN = 0;
	RECORD_NOT_FOUND = 1;
	AUTH_REGISTER_USER_UNVERIFIED = 2;
	AUTH_REGISTER_USER_VERIFIED = 3;
	AUTH_LOGIN_NOT_FOUND = 4;
	AUTH_LOGIN_USER_UNVERIFIED = 5;
	AUTH_LOGIN_PASSWORD_INCORRECT = 6;
	AUTH_LOGIN_PASSWORD_INCORRECT_3X = 7;
	AUTH_OTP_INVALID = 8;
	AUTH_OTP_ERROR_VERIFIED_USER = 9;
	AUTH_ACCESS_TOKEN_EXPIRED = 10;
	AUTH_REFRESH_TOKEN_EXPIRED = 11;
}